<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TestMath</string>
    <string name="title_tests">Тренировки</string>

    <string name="action_settings">Settings</string>
    <string name="action_level">Уровень сложности</string>
    <string name="action_about">О MathTest</string>
    <string name="action_begin">Начать</string>

    <string name="title_table_multiplication">Таблица умножения</string>
    <string name="title_sum">Сложение</string>
    <string name="title_subtraction">Вычитание</string>
    <string name="title_multiplication">Умножение</string>
    <string name="title_division">Деление</string>
    <string name="title_expression">Expression</string>
    <string name="title_multi">Разное</string>
    <string name="title_answer">Выберите правильный ответ</string>
    <string name="title_proceed">Продолжить</string>
    <string name="title_result">Результат</string>
    <string name="title_results">РЕЗУЛЬТАТЫ</string>
    <string name="title_activity_choice">Операции</string>
    <string name="title_activity_multi">По выбору</string>

    <string name="correct_answer">Правильный ответ</string>
    <string name="wrong_answer">Ошибка</string>
    <string name="check_answer">Вы уже ответили на этот вопрос</string>

    <!-- Choice Activity -->
    <string name="choice_operation">АРИФМЕТИЧЕСКИЕ ОПЕРАЦИИ</string>

    <!-- Dialog -->
    <string name="dialog_about_version">Версия 1.0.1</string>
    <string name="dialog_total_number_question">Всего вопросов:</string>
    <string name="dialog_number_positive_answer">Правильных ответов:</string>
    <string name="dialog_number_negative_answer">Неправильных ответов:</string>
    <string name="dialog_save_result">Сохранить</string>
    <string name="dialog_continue_result">Продолжить</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>

    <!-- Toast -->
    <string name="toast_continue">Продолжаем! Так держать</string>
    <string name="toast_next_level">Вы перешли на новый уровень</string>
    <string name="toast_check_operation">Выбирите арифметическую операцию</string>

    <!-- Menu -->
    <string name="menu_results">Результаты</string>

    <!-- Results -->
    <string name="result_score">Всего набрано очков:</string>
    <string name="result_level">Уровень сложности:</string>
    <string name="result_questions">Пройдено вопросов:</string>
    <string name="result_positive_answers">Правильных ответов:</string>
    <string name="result_negative_answers">Неправильных ответов:</string>

    <!-- SharedPreferences Sum -->
    <string name="sum_score">sum_score</string>
    <string name="sum_level">sum_level</string>
    <string name="sum_total_questions">sum_total_questions</string>
    <string name="sum_total_positive_answers">sum_total_positive_answers</string>
    <string name="sum_total_negative_answers">sum_total_negative_answers</string>

    <!-- SharedPreferences Subtraction -->
    <string name="subtraction_score">subtraction_score</string>
    <string name="subtraction_level">subtraction_level</string>
    <string name="subtraction_total_questions">subtraction_total_questions</string>
    <string name="subtraction_total_positive_answers">subtraction_total_positive_answers</string>
    <string name="subtraction_total_negative_answers">subtraction_total_negative_answers</string>

    <!-- SharedPreferences Multiplication -->
    <string name="multiplication_score">multiplication_score</string>
    <string name="multiplication_level">multiplication_level</string>
    <string name="multiplication_total_questions">multiplication_total_questions</string>
    <string name="multiplication_total_positive_answers">multiplication_total_positive_answers</string>
    <string name="multiplication_total_negative_answers">multiplication_total_negative_answers</string>

    <!-- SharedPreferences Division -->
    <string name="division_score">division_score</string>
    <string name="division_level">division_level</string>
    <string name="division_total_questions">division_total_questions</string>
    <string name="division_total_positive_answers">division_total_positive_answers</string>
    <string name="division_total_negative_answers">division_total_negative_answers</string>

    <!-- SharedPreferences Table Multiplication -->
    <string name="table_multiplication_score">table_multiplication_score</string>
    <string name="table_multiplication_level">table_multiplication_level</string>
    <string name="table_multiplication_questions">table_multiplication_questions</string>
    <string name="table_multiplication_positive_answers">table_multiplication_positive_answers</string>
    <string name="table_multiplication_negative_answers">table_multiplication_negative_answers</string>

    <!-- SharedPreferences Table Multiplication -->
    <string name="multi_score">multi_score</string>
    <string name="multi_level">multi_level</string>
    <string name="multi_questions">multi_questions</string>
    <string name="multi_positive_answers">multi_positive_answers</string>
    <string name="multi_negative_answers">multi_negative_answers</string>
    <string name="multi_sum">multi_sum</string>
    <string name="multi_subtraction">multi_subtraction</string>
    <string name="multi_multiplication">multi_multiplication</string>
    <string name="multi_division">multi_division</string>

</resources>
