<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_50"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp" >

    <TextView android:text="@string/title_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="26sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_table_multiplication"
        android:id="@+id/button_table_multiplication"
        android:layout_below="@+id/textView"
        android:textSize="20sp"
        android:onClick="startActivityTraining"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_action"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_sum"
        android:id="@+id/button_sum"
        android:layout_below="@+id/button_table_multiplication"
        android:textSize="20sp"
        android:onClick="startActivityTraining"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_action"
        android:textColor="@android:color/white" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_subtraction"
        android:id="@+id/button_subtraction"
        android:textSize="20sp"
        android:onClick="startActivityTraining"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_action"
        android:textColor="@android:color/white"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_multiplication"
        android:id="@+id/button_multiplication"
        android:textSize="20sp"
        android:onClick="startActivityTraining"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_action"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/title_division"
        android:id="@+id/button_division"
        android:layout_below="@+id/button_multiplication"
        android:textSize="20sp"
        android:onClick="startActivityTraining"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_action"
        android:textColor="@android:color/white"/>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:background="@drawable/layout_main_option"
                android:id="@+id/liner1"
                android:onClick="startActivityTraining"
                android:elevation="10dp">

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:id="@+id/space_1"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@+id/space_1"
                    android:src="@android:drawable/ic_menu_preferences" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sum"
                    android:id="@+id/textView15"
                    android:layout_below="@+id/space_1"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/primary_text_default_material_light"/>
            </RelativeLayout>

            <Space
                android:layout_width="3px"
                android:layout_height="3px" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_span="1"
                android:layout_weight="1"
                android:background="@drawable/layout_main_option"
                android:onClick="startActivityTraining"
                android:elevation="10dp">

                <Space
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:id="@+id/space_2"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView17"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@+id/space_2"
                    android:src="@android:drawable/ic_menu_preferences" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView16"
                    android:text="@string/title_subtraction"
                    android:layout_below="@+id/space_2"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/primary_text_default_material_light"/>

            </RelativeLayout>


        </TableRow>
    </TableLayout>

</LinearLayout>
