<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mogsev.myapplication.fragment.AssignmentFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_gravity="center_horizontal"
            android:baselineAligned="false">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_expression"
                android:id="@+id/textViewExpression"
                android:layout_centerHorizontal="true"
                android:textSize="38sp"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp" />
        </LinearLayout>
        <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_expression"
        android:id="@+id/textViewExpression"
        android:layout_centerHorizontal="true"
        android:textSize="38sp"
        android:layout_marginTop="5dp"
        android:gravity="top|center_vertical"
        android:layout_gravity="center_horizontal" />
        -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAnswer"
        android:layout_below="@+id/textViewExpression"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:autoText="false"
        android:text="@string/title_answer"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer1"
        android:id="@+id/answer1"
        android:layout_below="@+id/textViewAnswer"
        android:layout_marginTop="10dp"
        android:textSize="22sp"
        android:onClick="onClickAnswer"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_answer"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer2"
        android:id="@+id/answer2"
        android:layout_below="@+id/answer1"
        android:textSize="22sp"
        android:onClick="onClickAnswer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_answer"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="answer3"
        android:id="@+id/answer3"
        android:layout_below="@+id/answer2"
        android:textSize="22sp"
        android:onClick="onClickAnswer"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_answer"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_proceed"
        android:id="@+id/buttonProceed"
        android:onClick="onClickProceed"
        android:background="@drawable/button_action"
        android:textSize="22sp"
        android:layout_below="@+id/answer3"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white" />

    </LinearLayout>

</FrameLayout>
